--- a/common/scala/src/main/resources/reference.conf
+++ b/common/scala/src/main/resources/reference.conf
@@ -29,6 +29,7 @@ whisk.spi {
   InvokerProvider = org.apache.openwhisk.core.invoker.InvokerReactive
   InvokerServerProvider = org.apache.openwhisk.core.invoker.DefaultInvokerServer
   DurationCheckerProvider = org.apache.openwhisk.core.scheduler.queue.NoopDurationCheckerProvider
+  P2PManagerProvider = org.apache.openwhisk.core.scheduler.p2p.dlcl.DLCLManagerProvider # org.apache.openwhisk.core.scheduler.p2p.ft.FTManager
 }
 
 dispatchers {
