--- a/core/invoker/src/main/resources/application.conf
+++ b/core/invoker/src/main/resources/application.conf
@@ -20,6 +20,16 @@ include "logging"
 include "akka-http-version"
 
 whisk {
+
+  disk-path {
+    path: "/"
+  }
+
+  image-gc {
+    high-threshold-percent: 80
+    low-threshold-percent: 60
+  }
+
   blacklist {
     poll-interval: 5 minutes
   }
@@ -43,6 +53,15 @@ whisk {
       pause: 10 seconds
       unpause: 10 seconds
       version: 10 seconds
+    }
+  }
+
+  docker.image-client {
+    # Timeouts for image command
+    timeouts {
+        image-list: 5 seconds
+        rmi: 5 seconds
+        ps: 5 seconds
     }
   }
 
